# openrouter-model-workbook-maintainer-v2

./: .env.example  .gitignore  AGENT_TASK.md  Makefile  README.md  pyproject.toml  regenerate_model_workbook.py  requirements.txt  vercel.json
.github/workflows/: ci.yml  daily-refresh.yml
config/: cohort_rules.yaml  model_map.csv
config/scenarios/: default_profiles.yaml
data/latest/: cohort_rules.json  guide_cohort.json  guide_cohort.parquet  mapping_diagnostics.json  mapping_diagnostics.parquet  master_registry.json  master_registry.parquet  scenario_profiles.json  scenario_scores.json  scenario_scores.parquet  source_manifest.json
docs/: data-sources.md  identity-and-mapping.md  maintainer-notes.md  methodology.md  operations.md  prd.md  task-breakdown.md  troubleshooting.md
docs/ops/: secrets.md
output/acceptance/: chip-overflow-live-proof-2026-03-26.md  coding-calibration-live-2026-03-26.md  live-production-proof-2026-03-26.md  release-date-sorting-2026-03-27.md  scoring-calibration-live-2026-03-26.md  sort-stability-live-proof-2026-03-26.md  sortable-table-headers-2026-03-27.md  source-link-cta-2026-03-26.md  table-first-tool-2026-03-27.md  ui-audit-live-2026-03-26.md  vals-livebench-integrity-2026-03-26.md  vercel-build-hardening-2026-03-26.md
scripts/: bootstrap.sh  run_build.sh  run_refresh.sh
site/: README.md  package.json  pnpm-lock.yaml  vercel.json  vite.config.ts
site/src/: App.tsx  index.css  types.ts  (+1 more)
tests/: test_helpers.py  test_identity.py  test_pipeline.py  test_scoring.py  test_source_parsers.py  test_sources.py  test_workbook.py
(+32 files in other folders)
